syntax = "proto3";

package SCPDiscord.Interface;

message PlayerInfoCommand
{
	uint64 channelID = 1;
	string steamID = 2;
	uint64 interactionID = 3;
	uint64 discordID = 4;
}